Traduction des principaux titres en français.

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -61,8 +61,8 @@ Généralement, les balises apparaissent par paires avec une balise de début et
 
 Une liste complète des balises prises en charge par LiquidJS peut être trouvée [ici](https://liquidjs.com/tags/overview.html){:target="_blank"}.
 
-## Setup
-#### LiquidJS in Node.js
+## Installation
+#### LiquidJS dans Node.js
 
 Installer via npm :
 ``` bash
@@ -90,7 +90,7 @@ engine
 
 > **Démo de travail** : Voici une démo fonctionnelle pour l'utilisation de LiquidJS dans TypeScript : [liquidjs/demo/typescript/}(https://github.com/harttle/liquidjs/blob/master/demo/typescript/){:target="_blank"}
 
-#### LiquidJS in Browsers
+#### LiquidJS dans les navigateurs
 
 Des bundles UMD prédéfinis sont également disponibles :
 
@@ -103,7 +103,7 @@ Des bundles UMD prédéfinis sont également disponibles :
 
 > **Démo de travail** : Voici une démo vivante sur jsFiddle: [jsfiddle.net/pd4jhzLs/1/](https://jsfiddle.net/pd4jhzLs/1/){:target="_blank"}, et le code source est également disponible en [liquidjs/demo/browser/](https://github.com/harttle/liquidjs/blob/master/demo/browser/){:target="_blank"}.
 
-#### LiquidJS in CLI
+#### LiquidJS en CLI
 
 LiquidJS peut également être utilisé pour restituer un modèle directement depuis la CLI en utilisant `npx` :
 
@@ -404,7 +404,7 @@ engine.renderFileSync('views/entry'))
 
 Notez que les options du système de fichiers telles que `root`, `layouts`, `partials`, `relativeReference` seront ignorées lorsque les `templates` sont spécifiés.
 
-## Partials and Layouts
+## Partiels et mises en page
 #### Render Partials
 
 Pour les fichiers modèles suivants :
@@ -456,7 +456,7 @@ Footer
 
 Pour plus de détails, veuillez vous référer à la balise [layout](https://liquidjs.com/tags/layout.html){:target="_blank"}.
 
-## Use in Express.js
+## Utiliser dans Express.js
 
 LiquidJS est compatible avec les [express template engines](https://expressjs.com/en/resources/template-engines.html){:target="_blank"}. Vous pouvez définir l'instance liquidjs sur l'option du [view engine](https://expressjs.com/en/guide/using-template-engines.html){:target="_blank"} :
 
@@ -515,7 +515,7 @@ var engine = new Liquid({
 });
 ```
 
-## Caching
+## Mise en cache
 
 Dans un projet de site Web typique, nous aurons un répertoire de modèles de vues et ils seront rendus plusieurs fois. Dans un environnement de production, les fichiers modèles ne sont pas susceptibles d'être modifiés au fil du temps (en dehors des redéploiements). Il est donc logique de mettre en cache le contenu des fichiers et les modèles analysés (dans une sorte d'AST) pour améliorer les performances.
 
@@ -636,7 +636,7 @@ Sortie :
 "
 ```
 
-## Register Filters/Tags
+## Registre des filtres/tags
 #### Register Tags
 
 ``` js
@@ -744,7 +744,7 @@ Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/1/>{:target="_blank"}
 
 > **Arrow Functions** : ceci dans les fonctions fléchées est lié au contexte JavaScript actuel, vous devrez utiliser la syntaxe `function(){}` au lieu de la syntaxe `()=>{}` pour accéder correctement à `this.context`.
 
-## Parse Parameters
+## Paramètres d'analyse
 #### Access Raw Parameters
 
 Comme indiqué dans [Register Filters/Tags](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"}, les paramètres de balise sont disponibles sur `tagToken.args` sous forme de chaîne raw. Par exemple:
@@ -835,7 +835,7 @@ engine.registerTag('random', {
 
 Le rendu de `{% raw %}{%{% endraw %} random from:2, to:max {% raw %}%}{% endraw %}` dans la portée `{ max: 10 }` générera un nombre aléatoire dans la plage [2, 10]. Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/4/>{:target="_blank"}
 
-## Render Tag Content
+## Rendre le contenu de la balise
 
 Les balises personnalisées peuvent avoir un modèle de contenu et peuvent être imbriquées. Cet article décrit comment implémenter des balises personnalisées composées d'une balise de début , d'une balise de fin et d'un contenu de modèle entre elles.
 
@@ -1257,7 +1257,7 @@ engine.registerTag('upper', class UpperTag extends Tag {
 })
 ```
 
-## Whitespace Control
+## Contrôle des espaces
 
 Pour garder le code source propre et indenté, nous ajoutons des espaces à nos modèles. LiquidJS offre des fonctionnalités de contrôle des espaces pour éliminer ces espaces indésirables dans le code HTML de sortie.
 
